feat(aas3):[TRI-1307] Use new approach for relationships too, remove relationship specific api from EDC client